# molog

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
molog/: CMakeLists.txt
molog/src/molog/: assertion.hpp  configure.hpp  exception.cpp  exception.hpp  foreach.hpp  mologexcept.hpp
molog/src/molog/logger/: ipipe.cpp  ipipe.hpp  logger.cpp  logger.hpp  opipe.cpp  opipe.hpp  pipe.cpp  pipe.hpp  stdpipe.cpp
molog/src/molog/serializer/: endianness.hpp  serializer.hpp
test/: CMakeLists.txt
test/src/: test_assertion.cpp  test_file.cpp  test_logger.cpp  test_opipe.cpp  test_serde.cpp
